--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Geekers | Brands made easy</title>
 </head>
 <body>
 
     <nav>
         <h2 class="title">Geekers</h2>                  
-        <button type="button" class="p-bar"><img class="bars" id="bar" src="open-menu.png" alt=""></button>
+        <button type="button" class="p-bar"><img class="bars" id="bar" src="img/open-menu.png" alt=""></button>
         <ul class="nav-links" id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#ab">About</a></li>
@@ -20,7 +20,7 @@
 
     <section class="hero">
         <div class="front-cover">
-            <img src="filmmaking.png" alt="" class="girl">
+            <img src="img/filmmaking.png" alt="" class="girl">
         </div>
         <div class="front-desc">
             <h2>Building brands made easy</h2>            
@@ -35,20 +35,20 @@
                     <p>We're just 3 curious and skilled guys who can make filmmaking, design, and web developing easier for you</p>
             </div>
             <div class="pic" id="second-anim">
-                <img src="Building.jpg" alt="" >
+                <img src="img/Building.jpg" alt="" >
             </div>
  
     </section>
 
     <section class="best">
         <div class="opac"></div>
-        <div class="content">x
+        <div class="content">
             <div id="best-title">
                 <h2>Our <span>Services</span></h2>
             </div>
             <div class="contenttoo">
                 <div class="box" id="first-box">
-                    <img src="NewLogo.JPG" alt="" class="img">
+                    <img src="img/Vando.JPG" alt="" class="img">
                     <div class="contentin">
                             <h2>Vando FL</h2>
                             <p>
@@ -59,7 +59,7 @@
             </div>
 
               <div class="box" id="second-box">
-                  <img src="Gusti.jpg" alt="" class="img">
+                  <img src="img/Gusti.jpg" alt="" class="img">
                     <div class="contentin">
                             <h2>Gusti Cahya</h2>
                             <p>Gusti Cahya  is a full-stack web developer. He can make fully managing websites that can interact with users in real time.</p>
@@ -67,7 +67,7 @@
             </div>
 
               <div class="box" id="third-box">
-                  <img src="Img3.jpg" alt="" class="img">
+                  <img src="img/Img3.jpg" alt="" class="img">
                     <div class="contentin">
                             <h2>Nabil Afkar</h2>
                             <p>Nabil Afkar is a filmmaker, he creates,shoots & edit all his clips to become a masterpiece of a creation. He can make advertisements,trailers, quick snips and more.</p>
@@ -82,10 +82,10 @@
         <div class="content">
             <div class="text">Start <span>Now</span></div> 
                 <div class="icons">
-                    <div class="instagram sec"><img src="instagram.png" alt="">@example</div>
-                    <div class="gmail sec"><img src="gmail.png" alt="">example@random.com</div>
-                    <div class="linkedin sec"><img src="linkedin.png" alt="">example</div>
-                    <div class="facebook sec"><img src="facebook.png" alt="">example</div>
+                    <div class="instagram sec"><img src="img/instagram.png" alt="">@example</div>
+                    <div class="gmail sec"><img src="img/gmail.png" alt="">example@random.com</div>
+                    <div class="linkedin sec"><img src="img/linkedin.png" alt="">example</div>
+                    <div class="facebook sec"><img src="img/facebook.png" alt="">example</div>
                 </div>
         </div>
     </section>
