--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <ul class="nav-links" id="menu">
             <li><a href="#">Home</a></li>
             <li><a href="#ab">About</a></li>
-            <li><a href="#con">Contact</a></li>
+            <li><a href="#ser">Services</a></li>
         </ul>
     </nav>
 
@@ -40,7 +40,7 @@
  
     </section>
 
-    <section class="best">
+    <section class="best" id="ser">
         <div class="opac"></div>
         <div class="content">
             <div id="best-title">
