--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                                 He's creative and detailed with his works, and you surely wont be dissapointed with his results.
                             </p>
                     </div>
-            </div>
+                </div>
 
               <div class="box" id="second-box">
                   <img src="img/Gusti.jpg" alt="" class="img">
@@ -67,7 +67,7 @@
             </div>
 
               <div class="box" id="third-box">
-                  <img src="img/Img3.jpg" alt="" class="img">
+                  <img src="img/Nabil.jpg" alt="" class="img">
                     <div class="contentin">
                             <h2>Nabil Afkar</h2>
                             <p>Nabil Afkar is a filmmaker, he creates,shoots & edit all his clips to become a masterpiece of a creation. He can make advertisements,trailers, quick snips and more.</p>
