--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <title>Geekers | Brands made easy</title>
 </head>
@@ -41,65 +42,43 @@
     </section>
 
     <section class="best" id="ser">
-        <div class="opac"></div>
-        <div class="content">
-            <div id="best-title">
-                <h2>Our <span>Services</span></h2>
-            </div>
-            <div class="contenttoo">
-                <div class="box" id="first-box">
-                    <img src="img/Vando.JPG" alt="" class="img">
-                    <div class="contentin">
-                            <h2>Vando FL</h2>
-                            <p>
-                                Vando Fariand Lezarazy is a web designer, ui designer, and a logo designer.
-                                He's creative and detailed with his works, and you surely wont be dissapointed with his results.
-                            </p>
-                    </div>
-                </div>
-
-              <div class="box" id="second-box">
-                  <img src="img/Gusti.jpg" alt="" class="img">
-                    <div class="contentin">
-                            <h2>Gusti Cahya</h2>
-                            <p>Gusti Cahya  is a full-stack web developer. He can make fully managing websites that can interact with users in real time.</p>
-                    </div>
-            </div>
-
-              <div class="box" id="third-box">
-                  <img src="img/Nabil.jpg" alt="" class="img">
-                    <div class="contentin">
-                            <h2>Nabil Afkar</h2>
-                            <p>Nabil Afkar is a filmmaker, he creates,shoots & edit all his clips to become a masterpiece of a creation. He can make advertisements,trailers, quick snips and more.</p>
-                    </div>
-            </div>
-            </div>
-           
-        </div>
-    </section>
-
-    <section class="contact" id="con">
-        <div class="content">
-            <div class="text">Start <span>Now</span></div> 
-                <div class="icons">
-                    <div class="instagram sec"><img src="img/instagram.png" alt="">@example</div>
-                    <div class="gmail sec"><img src="img/gmail.png" alt="">example@random.com</div>
-                    <div class="linkedin sec"><img src="img/linkedin.png" alt="">example</div>
-                    <div class="facebook sec"><img src="img/facebook.png" alt="">example</div>
-                </div>
-        </div>
+          <div class="row padding">
+              <div class="col-lg-4  col-md-6 col-sm-12">
+                  <div class="card">
+                      <img class="card-img-top" src="img/Vando.jpg" alt="">
+                      <div class="card-body">
+                          <h4 class="card-title">Vando FL</h4>
+                          <p class="card-text">Vando Fariand Lezarazy is a web designer, ui designer, and a logo designer. He's creative and detailed when it comes to making projects.</p>
+                            <a href="#" class="btn btn-primary">Order Service</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4  col-md-6 col-sm-12">
+                  <div class="card">
+                      <img class="card-img-top" src="img/Nabil.jpg" alt="">
+                      <div class="card-body">
+                          <h4 class="card-title">Nabil Afkar</h4>
+                          <p class="card-text">Nabil Afkar is an experienced film maker and will make incredible videos based off of your brand..</p>
+                          <a href="#" class="btn btn-primary">Order Service</a>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-lg-4  col-md-6 col-sm-12">
+                  <div class="card">
+                      <img class="card-img-top" src="img/Gusti.jpg" alt="">
+                      <div class="card-body">
+                          <h4 class="card-title">Gusti Cahya</h4>
+                          <p class="card-text">Gusti Cahya is a Full-Stack Developer, he can make a fully managing websites that can interact with users in real time</p>
+                           <a href="#" class="btn btn-primary">Order Service</a>
+                      </div>
+                  </div>
+              </div>
+          </div>
+   
     </section>
 
     <footer>
-        <div class="content">
-            <div class="links">  
-                 <div class="instagram sec"><img src="instagram.png" alt=""></div>
-                 <div class="gmail sec"><img src="gmail.png" alt=""></div>
-                <div class="linkedin sec"><img src="linkedin.png" alt=""></div>
-                <div class="facebook sec"><img src="facebook.png" alt=""></div>
-            </div>
-                <h3>&copy; Copyright 2020 Vando FL. All rights reserved. </h3>
-        </div>
+        <h3>&copy; Copyright 2020 Geekers. All rights reserved. </h3>
     </footer>
 
     <script>
@@ -152,6 +131,8 @@ window.addEventListener('scroll', ()=> {
 
 });
     </script>
-    
+<!--     
+    <script src="js/jquery-3.3.1.slim.min.js"></script>
+    <script src="js/bootstrap.min.js"></script> -->
 </body>
 </html>
