--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                       <div class="card-body">
                           <h4 class="card-title">Vando FL</h4>
                           <p class="card-text">Vando Fariand Lezarazy is a web designer, ui designer, and a logo designer. He's creative and detailed when it comes to making projects.</p>
-                            <a href="#" class="btn btn-primary">Order Service</a>
+                            <a href="https://api.whatsapp.com/send?phone=6281238076848" class="btn btn-primary">Order Service</a>
                       </div>
                   </div>
               </div>
