--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                       <div class="card-body">
                           <h4 class="card-title">Nabil Afkar</h4>
                           <p class="card-text">Nabil Afkar is an experienced film maker and will make incredible videos based off of your brand..</p>
-                          <a href="#" class="btn btn-primary">Order Service</a>
+                          <a href="https://api.whatsapp.com/send?phone=6282147588138" class="btn btn-primary">Order Service</a>
                       </div>
                   </div>
               </div>
@@ -69,7 +69,7 @@
                       <div class="card-body">
                           <h4 class="card-title">Gusti Cahya</h4>
                           <p class="card-text">Gusti Cahya is a Full-Stack Developer, he can make a fully managing websites that can interact with users in real time</p>
-                           <a href="#" class="btn btn-primary">Order Service</a>
+                           <a href="https://api.whatsapp.com/send?phone=6287859671000" class="btn btn-primary">Order Service</a>
                       </div>
                   </div>
               </div>
