--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="best" id="ser">
           <div class="row padding">
-              <div class="col-lg-4  col-md-6 col-sm-12">
+              <div class="col-lg-4  col-md-6 col-sm-12 col-12">
                   <div class="card">
                       <img class="card-img-top" src="img/Vando.jpg" alt="">
                       <div class="card-body">
@@ -53,7 +53,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4  col-md-6 col-sm-12">
+              <div class="col-lg-4  col-md-6 col-sm-12 col-12">
                   <div class="card">
                       <img class="card-img-top" src="img/Nabil.jpg" alt="">
                       <div class="card-body">
@@ -63,7 +63,7 @@
                       </div>
                   </div>
               </div>
-              <div class="col-lg-4  col-md-6 col-sm-12">
+              <div class="col-lg-4  col-md-6 col-sm-12 col-12">
                   <div class="card">
                       <img class="card-img-top" src="img/Gusti.jpg" alt="">
                       <div class="card-body">
