--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
     <section class="hero">
         <div class="front-cover">
-            <img src="img/filmmaking.png" alt="" class="girl">
+            <img src="img/GeeksterForeGround.png" alt="" class="girl">
         </div>
         <div class="front-desc">
             <h2>Building brands made easy</h2>            
