--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <nav id="navbar">
-        <h2 class="title">Geekers</h2>                  
+        <h2 class="title">Geekers <img class="logo" src="img/GeekersLogo.jpg" alt=""></h2>                  
         <button type="button" class="p-bar"><img class="bars" id="bar" src="img/open-menu.png" alt=""></button>
         <ul class="nav-links" id="menu">
             <li><a href="#">Home</a></li>
