--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <div class="row padding">
               <div class="col-lg-4  col-md-6 col-sm-12 col-12">
                   <div class="card">
-                      <img class="card-img-top" src="img/Vando.jpg" alt="">
+                      <img class="" src="img/Vando.jpg" alt="">
                       <div class="card-body">
                           <h4 class="card-title">Vando FL</h4>
                           <p class="card-text">Vando Fariand Lezarazy is a web designer, ui designer, and a logo designer. He's creative and detailed when it comes to making projects.</p>
@@ -54,7 +54,7 @@
               </div>
               <div class="col-lg-4  col-md-6 col-sm-12 col-12">
                   <div class="card">
-                      <img class="card-img-top" src="img/Nabil.jpg" alt="">
+                      <img class="" src="img/Nabil.jpg" alt="">
                       <div class="card-body">
                           <h4 class="card-title">Nabil Afkar</h4>
                           <p class="card-text">Nabil Afkar is an experienced film maker and will make incredible videos based off of your brand..</p>
@@ -64,7 +64,7 @@
               </div>
               <div class="col-lg-4  col-md-6 col-sm-12 col-12">
                   <div class="card">
-                      <img class="card-img-top" src="img/Gusti.jpg" alt="">
+                      <img class="" src="img/Gusti.jpg" alt="">
                       <div class="card-body">
                           <h4 class="card-title">Gusti Cahya</h4>
                           <p class="card-text">Gusti Cahya is a Full-Stack Developer, he can make a fully managing websites that can interact with users in real time</p>
